arreglando deserialize y testing